fix(ui): show hidden tooltips
Some tooltips were being hidden under the UI component they were attached
to.

Closes #8142

--- a/src/css/tooltips/base.less
+++ b/src/css/tooltips/base.less
@@ -64,6 +64,36 @@
     }
 }
 
+.tooltipster-above {
+    border-radius: 0;
+    background: #fff;
+    box-shadow: 0 0 14px rgba(0,0,0,0.3);
+    color: #2c2c2c;
+    z-index: 999;
+
+    .tooltipster-content {
+        font-family: 'Arial', sans-serif;
+        font-size: 14px;
+        line-height: 16px;
+        padding: 8px 10px;
+    }
+}
+
+.tooltipster-above-export {
+    border-radius: 0;
+    background: #fff;
+    box-shadow: 0 0 14px rgba(0,0,0,0.3);
+    color: #2c2c2c;
+    z-index: 1050;
+
+    .tooltipster-content {
+        font-family: 'Arial', sans-serif;
+        font-size: 14px;
+        line-height: 16px;
+        padding: 8px 10px;
+    }
+}
+
 .tooltipster-icon-base() {
     border-radius: 0;
     border: 1px solid #2c2c2c;
